--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.0.2",
     "concurrently": "^6.2.1",
+    "dayjs": "^1.10.6",
+    "file-saver": "^2.0.5",
     "json-server": "^0.16.3",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.2",
+    "react-html-table-to-excel": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "xlsx": "^0.17.1"
   },
   "scripts": {
     "start": "react-scripts start",
