--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-bootstrap-validation": "^0.1.11",
+    "react-data-export": "^0.6.0",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-html-table-to-excel": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "semantic-ui-calendar-react": "^0.15.3",
     "web-vitals": "^1.1.2",
     "xlsx": "^0.17.1"
   },
