--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@progress/kendo-data-query": "^1.5.5",
     "@progress/kendo-drawing": "^1.11.0",
     "@progress/kendo-licensing": "^1.2.0",
@@ -34,11 +39,14 @@
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-html-table-to-excel": "^2.0.0",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-trello": "^2.2.11",
     "semantic-ui-calendar-react": "^0.15.3",
     "web-vitals": "^1.1.2",
-    "xlsx": "^0.17.1"
+    "xlsx": "^0.17.1",
+    "yamde": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
